--- a/frontend/src/styles/Header.scss
+++ b/frontend/src/styles/Header.scss
@@ -1,4 +1,21 @@
+header {
+  text-align: center;
+  margin-top: 25px;
+}
+
 .title {
   margin-left: 30px;
   font-size: 1.2em;
+}
+
+hr {
+  width: 50%;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.75),
+    rgba(0, 0, 0, 0)
+  );
 }
