--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -1,8 +1,6 @@
 .home-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  margin: 30px 80px;
-
-  // background-color: rebeccapurple;
+  margin: 30px;
 }
