--- a/client/src/styles/CreateForm.scss
+++ b/client/src/styles/CreateForm.scss
@@ -1,5 +1,16 @@
 .create-form-container {
   margin-top: 25px;
+  min-width: 250px;
+
+  @media only screen and (max-width: 600px) {
+    width: 95%;
+    margin-bottom: 25px;
+    text-align: center;
+  }
+
+  @media only screen and (max-width: 900px) {
+    text-align: center;
+  }
 }
 
 .error {
