--- a/client/src/styles/EditForm.scss
+++ b/client/src/styles/EditForm.scss
@@ -1,5 +1,16 @@
 .edit-form-container {
   margin-top: 25px;
+  min-width: 250px;
+
+  @media only screen and (max-width: 600px) {
+    width: 90%;
+    margin-bottom: 25px;
+    text-align: center;
+  }
+
+  @media only screen and (max-width: 900px) {
+    text-align: center;
+  }
 }
 
 .edit-form-container button {
