--- a/client/src/styles/Home.scss
+++ b/client/src/styles/Home.scss
@@ -9,3 +9,12 @@
     justify-content: space-around;
   }
 }
+
+.table-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.search-input {
+  margin-left: 40px;
+}
